# crewai_and_agentops_practice

./: Dockerfile.dev  README.md  hit_song.md  produced_song.md  pyproject.toml  report.md  requirements.txt  song.md
.devcontainer/: devcontainer.json
src/frequency_music_crew/: crew.py  main.py
src/frequency_music_crew/config/: tasks.yaml
src/simple_crew/: crew.py  main.py
src/simple_crew/config/: agents.yaml  tasks.yaml
