[tool.poetry]
name = "frequency_music_crew"
version = "0.1.0"
description = "frequency_music_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.63.6,<1.0.0" }
agentops = "^0.3.12"


[tool.poetry.scripts]
run_crew = "src.frequency_music_crew.main:run"
train = "src.frequency_music_crew.main:train"
replay = "src.frequency_music_crew.main:replay"
test = "src.frequency_music_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
